inserindo verificação de agendamento
